# CLE

./: bitonicSource.c  p1.c  word_counter.c  word_counter.h
assignment1/: bitonic.c
assignment1/common/: fifo.c  fifo.h  prob_const.h  time_spec.h
assignment1/prog1/: concurrent_word_count.c  word_count.c
assignment1/prog1/results/: results.txt
assignment1/prog1/src/multi_threaded/: CMakeLists.txt  character_utils.c  character_utils.h  cli_utils.c  cli_utils.h  constants.h  main.c  shared_region.c  shared_region.h
assignment1/prog2/: bitonic.c  bitonic_cracked.c  conc_bitonic.c  concurrent_bitonic.c  fifo.c  fifo.h  fifo_data.h  handler.h  output.txt
